syntax = "proto3";

import "google/protobuf/timestamp.proto";

message LeaseRequest {
  string tmIdentifier = 1;
  repeated string objects = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message LeaseRequestResponse {
}

message PrepareRequest {
  int32 epoch = 1;
}

message Promise {
  int32 writeTimestamp = 1;
  repeated LeaseRequest value = 2;
}

message AcceptRequest {
  int32 epoch = 1;
  repeated LeaseRequest value = 2;
}

message Accepted {
  enum AcceptedType {
    ACCEPT = 0;
    REJECT = 1;
  }
  AcceptedType type = 1;
}

service LeaseManagerService {
  rpc Request(LeaseRequest) returns (LeaseRequestResponse);
  rpc Prepare(PrepareRequest) returns (Promise);
  rpc Accept(AcceptRequest) returns (Accepted);
}